--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.1.0",
+    "mocha-suppress-logs": "^0.3.1",
     "sinon": "^11.1.2"
   }
 }
